@@ -19,7 +19,6 @@ S3method(summary,afex_aov)
 S3method(summary,mixed)
 export(afex_options)
 export(afex_plot)
-export(all_fit)
 export(aov.car)
 export(aov4)
 export(aov_4)
@@ -33,7 +32,6 @@ export(lmer)
 export(lmer_alt)
 export(mixed)
 export(nice)
-export(nmkbw)
 export(oneway_plot)
 export(round_ps)
 export(round_ps_apa)
@@ -48,10 +46,7 @@ importFrom(car,Anova)
 importFrom(lme4,findbars)
 importFrom(lme4,getME)
 importFrom(lme4,glmer)
-importFrom(lme4,glmerControl)
-importFrom(lme4,isGLMM)
 importFrom(lme4,isREML)
-importFrom(lme4,lmerControl)
 importFrom(lme4,nobars)
 importFrom(lmerTest,lmer)
 importFrom(methods,as)
@@ -71,18 +66,15 @@ importFrom(stats,formula)
 importFrom(stats,logLik)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
-importFrom(stats,optim)
 importFrom(stats,p.adjust)
 importFrom(stats,predict)
 importFrom(stats,qt)
 importFrom(stats,reshape)
 importFrom(stats,residuals)
 importFrom(stats,sd)
-importFrom(stats,setNames)
 importFrom(stats,symnum)
 importFrom(stats,t.test)
 importFrom(stats,terms)
-importFrom(stats,update)
 importFrom(stats,wilcox.test)
 importFrom(stats,xtabs)
 importFrom(utils,head)
